--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + HeroUI</title>
-    <meta key="title" content="Vite + HeroUI" property="og:title" />
+    <title>SignSpeak</title>
+    <meta key="title" content="SignSpeak" property="og:title" />
     <meta
-      content="Make beautiful websites regardless of your design experience."
+      content="Empowering Inclusive Communication"
       property="og:description"
     />
     <meta
-      content="Make beautiful websites regardless of your design experience."
+      content="Empowering Inclusive Communication"
       name="description"
     />
     <meta
@@ -19,7 +19,7 @@
       content="viewport-fit=cover, width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
       name="viewport"
     />
-    <link href="/favicon.ico" rel="icon" />
+    <link href="/logo.svg" rel="icon" />
   </head>
   <body>
     <div id="root"></div>
